# birthday-cli

./: Cargo.toml  README.md
src/: birthday.rs  birthday_store.rs  lib.rs  main.rs  output.rs
