[package]
name = "birthday-cli"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
directories = "5.0.1"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
tabled = "0.16.0"